Rename base image for Yosys; remove Perses